k8s/manifests/app-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: music-app
spec:
  type: NodePort
  selector:
    app: music-app
  ports:
    - port: 8088
      targetPort: 8088
      nodePort: 30088
