k8s/manifests/app-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: music-app-ingress
spec:
  rules:
    - host: music.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: music-app
                port:
                  number: 8088
